# rinha_2025

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
gateway/: Cargo.toml  Dockerfile  settings.toml
gateway/src/: main.rs
load-balancer/: Cargo.toml  Dockerfile  settings.toml
load-balancer/src/: main.rs
queue/: Cargo.toml  Dockerfile
queue/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
worker/: Cargo.toml  Dockerfile  settings.toml
worker/src/: main.rs
