[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
futures = "0.3"
http = "1.2"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
queue = { path = "../queue" }
tikv-jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
